# promptguard2

./: .env.example  .gitignore  AGENTS.md  BENIGN_BASELINE_SUMMARY.md  GEMINI.md  MIGRATION_EXECUTED.md  NOTICE.md  PHASE3_MVP_IMPLEMENTATION_SUMMARY.md  README.md  alignment_lab_failures_data.json  analyze_alignment_lab.py  analyze_detected_cases.py  analyze_history_false_negatives.py  analyze_post_tif_results.py  analyze_reciprocity_patterns.py  attack_detection_analysis.txt  check_attack_prompt.py  citation.txt  create_v2_1_e.py  demo_mhj_5_sequences.py  encoding_comprehensive_results.json  encoding_fix_test_results.json  false_positive_analysis.md  fix_v2_1_d_json.py  gold_standard_review.csv  gold_standard_review_2_tony.xlsx  gold_standard_review_tony.csv  gold_standard_review_tony.xlsx  history_false_negatives.txt  history_false_negatives_full.txt  inspect_v2_1_d.py  investigate_attack_detection.py  investigate_data_quality.py  jailbreakbench_gold_standard_review.csv  jailbreakbench_only_review.csv  knowledge_recovery_extractive_labeling.md  launch_parallel_step1.sh  monitor_post_tif.py  neutral_encoding_validation_results.json  phase1b_gold_standard_review.csv  (+40 more)
.claude/: settings.json
.serena/: project.yml
config/: experiments.yaml
data/: .gitignore
docs/: ANALYSIS_alignment_lab_failures.md  ANALYSIS_alignment_lab_low_detection.md  ANALYSIS_other_category_failures.md  ANALYSIS_other_category_low_detection.md  BUG_ANALYSIS_observer_placeholder.md  ENCODING_FIX_STATUS.md  ENCODING_FIX_VALIDATION.md  INSTANCE_HANDOFF_DATASET_QUALITY.md  INSTANCE_HANDOFF_ENCODING_FIX_COMPLETE.md  INSTANCE_HANDOFF_FR3_FR4.md  INSTANCE_HANDOFF_FR5_FR6_STEP1.md  INSTANCE_HANDOFF_LEARNING_LOOP_ANALYZED.md  INSTANCE_HANDOFF_LEARNING_LOOP_READY.md  INSTANCE_HANDOFF_PHASE1B_RUNNING.md  INSTANCE_HANDOFF_PHASE1_STATUS.md  INSTANCE_HANDOFF_PHASE2B_ENCODING_DISCOVERY.md  INSTANCE_HANDOFF_PHASE2_COMPLETE.md  INSTANCE_HANDOFF_PHASE2_FACTORIAL_READY.md  INSTANCE_HANDOFF_PHASE2_PRE_VALIDATION_COMPLETE.md  INSTANCE_HANDOFF_PHASE2_READY.md  INSTANCE_HANDOFF_PHASE3_CONTEXT_COMPARISON.md  RESEARCH_PROTOCOL.md  (+24 more)
(+276 files in other folders)
